--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-image: url('./Assets/Background.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height:100vh;
+  width:100%
 }
 
 .App-logo {
