--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,14 @@
 .App {
   text-align: center;
-  background-image: url('./Assets/Background.jpg');
+  background-image: url('./Assets/Background5.jpg');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height:100vh;
-  width:100%
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* height:100%;
+  width:100% */
 }
 
 .App-logo {
