--- a/frontend/src/components/Home/Home.styles.css
+++ b/frontend/src/components/Home/Home.styles.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     height: 100%;
     justify-content: space-around;
+
 }
 .tickertape {
    
@@ -28,4 +29,13 @@
     border-width: 1px; */
     width:50%;
     margin-left: 25%;
+    margin-top: 7%;
+}
+.graph{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20%;
+   
+
 }
